# Wearable

./: .gitignore  .gitmodules  Parts.blend  README.md  correctpxmm.xcf  dpad.blend  dpad.xcf  font.xcf  textures.xcf  uidebug.xcf  uimockup.xcf
PythonUITest/: canvas.py
Wearable/: CMakeLists.txt  README.md  emulator.cpp  imgconv.cpp  sdkconfig  texture.h  ui.h  wearable.cpp
Wearable/src/: CMakeLists.txt  CMakeLists.txt.1  user_inputs.cpp  user_inputs.h  wearable.cpp
Wearable/src/common/: config.h  sizes.h  types.h  wbl_func.cpp  wbl_func.h
Wearable/src/display/: displaybuffer.h  sh1107.h  sh1107_defs.h
Wearable/src/emulator/: CMakeLists.txt  consolebuffer.h  emu_func.cpp  emulator.cpp  emulator_inputs.cpp
Wearable/src/emulator/stubs/: displaybuffer.h  esp_system.h  esp_types.h
Wearable/src/emulator/stubs/freertos/: FreeRTOS.h
Wearable/src/emulator/tests/: layout.cpp
Wearable/src/log/: log.h
Wearable/src/peripheral/: gps.cpp  gps.h  i2c.h
Wearable/src/ui/: display_timeout.cpp  display_timeout.h  font.h  framebuffer.h  node_iterator.h  sprites.cpp  sprites.h  texture.h  ui.h  ui_func.cpp  ui_func.h  ui_log.h
fonts/: pack.py
stl/: ADA254.stl  ADXL345.stl  AHT21.stl  BME280.stl  ESP8266.stl  GT-U7.stl  Lipo 1200.stl  Lipo 500.stl  MAX30102.stl  Parts OLED Back.stl  Parts OLED Cover.stl  Parts OLED Frame New.stl  Parts OLED Frame.stl  Parts SMD Button Housing.stl  PartsBME688_PCB.001.stl  PartsBerryGPS-IMU_PCB.001.stl  PartsESP32_PCB.001.stl  PartsHaptic_Motor.001.stl  PartsLTR390-UV_PCB.001.stl  PartsLipo_500mAh.001.stl  PartsMAX30102_PCB.001.stl  PartsMICS-6814_PCB.001.stl  PartsPiezo.001.stl  PartsSD_card_PCB.001.stl  dpad Button Board.stl  dpad frame.stl  dpad holder.stl  dpad.gcode  dpad.stl  dpadarrow.stl  dpadbuttondemo.gcode  dpadbuttondemo.stl  dpadenter.stl  dpadring.3mf  dpadring.gcode  dpadring.stl  dpadring2.gcode  parts.gcode  sh1107 inner.3mf  sh1107 inner.stl  (+2 more)
